[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "nullstrap"
version = "0.1.0"
description = "Python implementation of Nullstrap — a versatile method for variable selection with false discovery rate control."
authors = [{name = "Wenbin Guo"}]
keywords = ["variable selection", "false discovery rate", "statistics", "machine learning", "feature selection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "scikit-survival>=0.22; platform_system!='Windows'",
]

[project.optional-dependencies]
graphical = ["scikit-learn>=1.2"]
survival = ["scikit-survival>=0.22"]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0"
]
dev = [
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "linkify-it-py>=2.0.0",
    "sphinx-autodoc-typehints>=1.0"
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "linkify-it-py>=2.0.0",
    "sphinx-autodoc-typehints>=1.0"
]

[project.urls]
Repository = "https://github.com/wbvguo/pyNullstrap"
Documentation = "https://github.com/wbvguo/pyNullstrap"
